# cartesio_collision_support

./: .gitignore  CMakeLists.txt  README.md  package.xml
examples/: add_sphere.cpp  collision_avoidance_issue.cpp
examples/config/: centauro_collision_avoidance_issue_stack.yaml  centauro_collision_avoidance_stack.yaml  cogimon_collision_avoidance_stack.yaml  collision_avoidance.rviz  pcl_integration.rviz
launch/: centauro_collision_avoidance.launch  centauro_collision_avoidance_issue.launch  cogimon_collision_avoidance.launch  pcl_test.launch
msg/: CollisionState.msg
src/: Collision.cpp  Collision.h
src/planning_scene/: planning_scene_wrapper.cpp  planning_scene_wrapper.h
src/utils/: point_cloud_manager.cpp  point_cloud_manager.h  point_cloud_node.cpp
