<?xml version="1.0"?>
<package format="2">
  <name>cartesio_collision_support</name>
  <version>0.0.0</version>
  <description>The cartesio_collision_support package</description>

  <maintainer email="enrico@todo.todo">enrico</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>cartesian_interface</depend>
  <depend>moveit-core</depend>
  <depend>moveit-ros-planning</depend>
  <depend>moveit-ros-planning-interface</depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
